[gd_scene load_steps=5 format=3 uid="uid://nbwnpde4n51i"]

[ext_resource type="Script" uid="uid://c5wqia1i2xeug" path="res://Nodes_Alvin/Main.gd" id="1_tkdh7"]
[ext_resource type="Script" uid="uid://o5bnob70e001" path="res://Nodes_Alvin/progress_bar.gd" id="2_n3jw1"]
[ext_resource type="Texture2D" uid="uid://cuf40glimnv8e" path="res://Robert trash pile/icon.svg" id="3_knifv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bj8af"]
size = Vector2(69.1973, 33.7213)

[node name="ToyDetect" type="Node2D"]
position = Vector2(67, 596)
script = ExtResource("1_tkdh7")

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = 558.0
offset_top = -333.0
offset_right = 659.0
offset_bottom = -256.0
script = ExtResource("2_n3jw1")

[node name="detectArea" type="Area2D" parent="." groups=["Detect"]]

[node name="Sprite2D" type="Sprite2D" parent="detectArea"]
position = Vector2(-0.999878, -0.999969)
scale = Vector2(0.492187, 0.511719)
texture = ExtResource("3_knifv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="detectArea"]
position = Vector2(-1, -1)
shape = SubResource("RectangleShape2D_bj8af")

[connection signal="ProgressChange" from="." to="." method="_on_progress_change"]
[connection signal="area_entered" from="detectArea" to="." method="_on_detect_area_area_entered"]
[connection signal="body_entered" from="detectArea" to="." method="_on_detect_area_body_entered"]
